samples/_failures_safe/1761339807_07e336_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_696b3ae2.c: In function ‘main’:
./samples/SAFE/__tmp_696b3ae2.c:147:9: error: expected declaration or statement at end of input
  147 |         for (int i = 0; i < log_count; i++) {
      |         ^~~
./samples/SAFE/__tmp_696b3ae2.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_696b3ae2.c:147:9: error: expected declaration or statement at end of input
